<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New window</string>
    <string name="new_incognito_tab">New incognito window</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved Pages</string>
    <string name="added_to_bookmarks">Added to bookmarks</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bar_loading">Loading\u2026</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_go_back">Go back</string>
    <string name="ssl_untrusted">This certificate is not from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site does not match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate is not valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder\u2026</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Add to Bookmarks</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Saved to bookmarks.</string>
    <string name="bookmark_not_saved">Unable to save bookmark.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_needs_title">"Bookmark must have a name."</string>
    <string name="bookmark_needs_url">"Bookmark must have a location."</string>
    <string name="bookmark_url_not_valid">URL is not valid.</string>
    <string name="bookmark_cannot_save_url">This URL cannot be bookmarked.</string>
    <string name="delete_bookmark">Delete</string>
    <string name="bookmark_page">Bookmark last-viewed page</string>
    <string name="bookmark_thumbnail_view">Thumbnails</string>
    <string name="bookmark_list_view">List</string>
    <string name="current_page">from\u0020</string>
    <string name="delete_bookmark_warning">Bookmark \"<xliff:g id="bookmark">%s</xliff:g>\" will be deleted.</string>
    <string name="open_all_in_new_window">Open all in new windows</string>
    <string name="goto_dot">Go</string>
    <string name="menu_new_tab">Open new tab</string>
    <string name="incognito_tab">Open new incognito tab</string>
    <string name="select_dot">Select text</string>
    <string name="tab_picker_title">Current windows</string>
    <string name="tab_picker_remove_tab">Close</string>
    <string-array name="bookmarks" translatable="false">
        <item>Google</item>
        <item>http://www.google.com/</item>
        <item>Picasa</item>
        <item>http://picasaweb.google.com/</item>
        <item>Yahoo!</item>
        <item>http://www.yahoo.com/</item>
        <item>MSN</item>
        <item>http://www.msn.com/</item>
        <item>Twitter</item>
        <item>http://twitter.com/</item>
        <item>Facebook</item>
        <item>http://www.facebook.com/</item>
        <item>Wikipedia</item>
        <item>http://www.wikipedia.org/</item>
        <item>eBay</item>
        <item>http://www.ebay.com/</item>
        <item>CNN</item>
        <item>http://www.cnn.com/</item>
        <item>NY Times</item>
        <item>http://www.nytimes.com/</item>
        <item>ESPN</item>
        <item>http://espn.com/</item>
        <item>Amazon</item>
        <item>http://www.amazon.com/</item>
        <item>Weather Channel</item>
        <item>http://www.weather.com/</item>
        <item>BBC</item>
        <item>http://www.bbc.co.uk/</item>
    </string-array>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="menu_view_download">Downloads</string>
    <string name="clear">Clear</string>
    <string name="pref_content_title">Page content settings</string>
    <string name="pref_content_load_images">Load images</string>
    <string name="pref_content_load_images_summary">Display images on web pages</string>
    <string name="pref_content_block_popups">Block pop-ups</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_content_open_in_background">Open in background</string>
    <string name="pref_content_plugins">Enable plug-ins</string>
    <string name="pref_content_open_in_background_summary">Open new windows behind the current one</string>
    <string name="pref_content_homepage">Set homepage</string>
    <string name="pref_content_search_engine">Set search engine</string>
    <string name="pref_content_search_engine_summary">Select a search engine</string>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format web pages to fit the screen</string>
    <string name="pref_general_autofill_title">Auto-fill</string>
    <string name="pref_personal_sync_with_chrome">Sync with Google Chrome</string>
    <string name="pref_personal_sync_with_chrome_summary">Share bookmarks &amp; other data between Android Browser and Google Chrome</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms in a single click</string>
    <string name="pref_autofill_profile_editor">Auto-fill data</string>
    <string name="pref_autofill_profile_editor_summary">Enter and save data for auto-filling web form fields</string>
    <string name="autofill_profile_editor_name">Full name:</string>
    <string name="autofill_profile_editor_email_address">Email:</string>
    <string name="autofill_profile_editor_save_profile">Save profile</string>
    <string name="pref_privacy_clear_cache">Clear cache</string>
    <string name="pref_privacy_clear_cache_summary">Clear locally cached content and databases</string>
    <string name="pref_privacy_clear_cache_dlg">Locally cached content and databases will be deleted.</string>
    <string name="pref_privacy_clear_cookies">Clear all cookie data</string>
    <string name="pref_privacy_clear_cookies_summary">Clear all browser cookies</string>
    <string name="pref_privacy_clear_cookies_dlg">All cookies will be deleted.</string>
    <string name="pref_privacy_clear_history">Clear history</string>
    <string name="pref_privacy_clear_history_summary">Clear the browser navigation history</string>
    <string name="pref_privacy_clear_history_dlg">The browser navigation history will be deleted.</string>
    <string name="pref_privacy_clear_form_data">Clear form data</string>
    <string name="pref_privacy_clear_form_data_summary">Clear all the saved form data</string>
    <string name="pref_privacy_clear_form_data_dlg">All saved form data will be deleted.</string>
    <string name="pref_privacy_clear_passwords">Clear passwords</string>
    <string name="pref_privacy_clear_passwords_summary">Clear all saved passwords</string>
    <string name="pref_privacy_clear_passwords_dlg">All saved passwords will be deleted.</string>
    <string name="pref_privacy_enable_geolocation">Enable location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to request access to your location</string>
    <string name="pref_privacy_clear_geolocation_access">Clear location access</string>
    <string name="pref_privacy_clear_geolocation_access_summary">Clear location access for all websites</string>
    <string name="pref_privacy_clear_geolocation_access_dlg">Clear location access for all websites</string>
    <string name="pref_security_remember_passwords">Remember passwords</string>
    <string name="pref_security_remember_passwords_summary">Save usernames and passwords for websites</string>
    <string name="pref_security_save_form_data">Remember form data</string>
    <string name="pref_security_save_form_data_summary">Remember data I type in forms for later use</string>
    <string name="pref_security_show_security_warning">Show security warnings</string>
    <string name="pref_security_show_security_warning_summary">Show warning if there is a problem with a site\'s security</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read \"cookie\" data</string>
    <string name="pref_default_zoom">Default zoom</string>
    <string name="pref_default_zoom_dialogtitle">Default zoom</string>
    <string name="pref_content_load_page">Open pages in overview</string>
    <string name="pref_content_load_page_summary">Show overview of newly opened pages</string>
    <string name="pref_extras_title">Advanced</string>
    <string name="pref_extras_website_settings">Website settings</string>
    <string name="pref_extras_website_settings_summary">Advanced settings for individual websites</string>
    <string name="pref_extras_reset_default">Reset to default</string>
    <string name="pref_extras_reset_default_summary">Restore default settings</string>
    <string name="pref_extras_reset_default_dlg">Settings will revert to default values.</string>
    <string name="pref_extras_reset_default_dlg_title">Reset to default</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string name="pref_default_text_encoding_dialogtitle">Text encoding</string>
    <string name="pref_default_text_encoding_default" translatable="false">Latin-1</string>
</resources>