<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:key="remember_passwords"
            android:defaultValue="true"
            android:title="@string/pref_security_remember_passwords"
            android:summary="@string/pref_security_remember_passwords_summary" />

    <com.android.browser.BrowserYesNoPreference
            android:key="privacy_clear_passwords"
            android:title="@string/pref_privacy_clear_passwords"
            android:summary="@string/pref_privacy_clear_passwords_summary"
            android:dialogMessage="@string/pref_privacy_clear_passwords_dlg" 
            android:dialogTitle="@string/clear" 
            android:dialogIcon="@android:drawable/ic_dialog_alert"/>
            
    <CheckBoxPreference
            android:key="show_security_warnings"
            android:defaultValue="true"
            android:title="@string/pref_security_show_security_warning"
            android:summary="@string/pref_security_show_security_warning_summary" />

</PreferenceScreen>
